Minor refactor in Geronimo to fix some documentation-related details